# rust-package-manager

./: Cargo.toml  README.md  success_template.txt  template.txt
database/: command.txt  output.toml  package_data.toml  software_data.toml
file/: bootfile.txt  failed_template.txt
package_example/: control.txt  postrm.txt
software-package/: a-1.txt  b-1.txt  d-1.txt  e-1.txt
src/: README.md  dep_manager.rs  global_error.rs  main.rs  network_module.rs  run_profile.rs  scheduler_module.rs  software_manager.rs  template.txt  test_backend.rs  version_mod.rs  version_wrapper.rs
src/entity/: dependency.rs  mod.rs  software.rs  version_wrapper.rs
src/error/: global_error.rs  mod.rs  software_error.rs  system_error.rs
src/manager/: mod.rs  package_manager.rs  software_manager.rs
src/package_example/: postinst.txt  preinst.txt  prerm.txt
src/test/: mod.rs  test_backend.rs
src/tool/: mod.rs  network_module.rs  resolve_file.rs  run_profile.rs
